--- a/user-service.properties
+++ b/user-service.properties
@@ -1,12 +1,13 @@
 spring.application.name=user-service
 server.port=8081
 
-management.endpoints.web.exposure.include=health,info
+management.endpoints.web.exposure.include=health,info prometheus
 management.endpoint.health.show-details=never
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+eureka.instance.prefer-ip-address=true
 
 logging.level.root=INFO
 logging.level.org.springframework.cloud=INFO
