--- a/user-service.properties
+++ b/user-service.properties
@@ -1,7 +1,7 @@
 spring.application.name=user-service
 server.port=8081
 
-management.endpoints.web.exposure.include=health,info prometheus
+management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.health.show-details=never
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
