--- a/user-service.properties
+++ b/user-service.properties
@@ -11,3 +11,13 @@ eureka.instance.prefer-ip-address=true
 
 logging.level.root=INFO
 logging.level.org.springframework.cloud=INFO
+
+spring.datasource.url=jdbc:h2:mem:userdb;DB_CLOSE_DELAY=-1;MODE=Oracle
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
