--- a/user-service.properties
+++ b/user-service.properties
@@ -1,7 +1,7 @@
 spring.application.name=user-service
 server.port=8081
 
-management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoints.web.exposure.include=health,info,prometheus, refresh
 management.endpoint.health.show-details=never
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
@@ -12,12 +12,14 @@ eureka.instance.prefer-ip-address=true
 logging.level.root=INFO
 logging.level.org.springframework.cloud=INFO
 
-spring.datasource.url=jdbc:h2:mem:userdb;DB_CLOSE_DELAY=-1;MODE=Oracle
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
 
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/healthdb
+spring.datasource.username=hc_user
+spring.datasource.password=hc_pass
+spring.datasource.hikari.maximum-pool-size=10
+
+
+spring.jpa.hibernate.ddl-auto=update         # use 'create' the first time if you want a fresh schema
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
