--- a/user-service.properties
+++ b/user-service.properties
@@ -1,6 +1,7 @@
 spring.application.name=user-service
 server.port=8081
 
+management.endpoint.refresh.enabled=true
 management.endpoints.web.exposure.include=health,info,prometheus,refresh
 management.endpoint.health.show-details=never
 
