--- a/user-service.properties
+++ b/user-service.properties
@@ -20,7 +20,7 @@ spring.datasource.password=hc_pass
 spring.datasource.hikari.maximum-pool-size=10
 
 
-spring.jpa.hibernate.ddl-auto=update         # use 'create' the first time if you want a fresh schema
+spring.jpa.hibernate.ddl-auto=update        
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
