--- a/user-service.properties
+++ b/user-service.properties
@@ -2,7 +2,7 @@ spring.application.name=user-service
 server.port=8081
 
 management.endpoint.refresh.enabled=true
-management.endpoints.web.exposure.include=health,info,prometheus,refresh
+management.endpoints.web.exposure.include=health,info,prometheus,refresh,metrics
 management.endpoint.health.show-details=never
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
