--- a/user-service.properties
+++ b/user-service.properties
@@ -3,6 +3,10 @@ server.port=8081
 
 management.endpoint.refresh.enabled=true
 management.endpoints.web.exposure.include=health,info,prometheus,refresh,metrics
+
+
+give me as appointment-service.properties for hea
+
 management.endpoint.health.show-details=never
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
