password updated in user service

--- a/user-service.properties
+++ b/user-service.properties
@@ -19,8 +19,8 @@ logging.level.org.springframework.cloud=INFO
 
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/healthdb
-spring.datasource.username=hc_user
-spring.datasource.password=hc_pass
+spring.datasource.username=health
+spring.datasource.password=health
 spring.datasource.hikari.maximum-pool-size=10
 
 
