--- a/appointment-service-dev.properties
+++ b/appointment-service-dev.properties
@@ -17,4 +17,4 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 management.endpoints.web.exposure.include=health,info,metrics,prometheus
 management.endpoint.health.show-details=always
 
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/.well-known/jwks.json
+security.jwt.secret=my-super-strong-secret-key
