updated user-service.properties with jwt secret

--- a/user-service.properties
+++ b/user-service.properties
@@ -1,30 +1,26 @@
 spring.application.name=user-service
 server.port=8081
 
-management.endpoint.refresh.enabled=true
-management.endpoints.web.exposure.include=health,info,prometheus,refresh,metrics
-
-
-give me as appointment-service.properties for hea
-
-management.endpoint.health.show-details=never
-
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-eureka.instance.prefer-ip-address=true
-
-logging.level.root=INFO
-logging.level.org.springframework.cloud=INFO
-
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/healthdb
 spring.datasource.username=health
 spring.datasource.password=health
 spring.datasource.hikari.maximum-pool-size=10
 
-
 spring.jpa.hibernate.ddl-auto=update        
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.prefer-ip-address=true
+management.endpoint.refresh.enabled=true
+management.endpoints.web.exposure.include=health,info,prometheus,refresh,metrics
+management.endpoint.health.show-details=never
+
+logging.level.root=INFO
+logging.level.org.springframework.cloud=INFO
+
+security.jwt.secret=0aKa2klczPmVfS2C0JIZqiAAHe18xxOeWbBbNBdrNBc=
+security.jwt.exp-min=60
