added refresh to appointment-service-dev.properties

--- a/appointment-service-dev.properties
+++ b/appointment-service-dev.properties
@@ -14,7 +14,7 @@ spring.kafka.template.default-topic=appointments.events
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
-management.endpoints.web.exposure.include=health,info,metrics,prometheus
+management.endpoints.web.exposure.include=health,info,metrics,prometheus,refresh
 management.endpoint.health.show-details=always
 
 security.jwt.secret=0aKa2klczPmVfS2C0JIZqiAAHe18xxOeWbBbNBdrNBc=
