metrics,env,beans are updated

--- a/user-service.properties
+++ b/user-service.properties
@@ -16,7 +16,7 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=true
 management.endpoint.refresh.enabled=true
-management.endpoints.web.exposure.include=health,info,prometheus,refresh,metrics
+management.endpoints.web.exposure.include=health,info,prometheus,refresh,metrics,env,beans
 management.endpoint.health.show-details=never
 
 logging.level.root=INFO
