updated appointment service with slot timings and working hours config

--- a/appointment-service-dev.properties
+++ b/appointment-service-dev.properties
@@ -17,4 +17,8 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 management.endpoints.web.exposure.include=health,info,metrics,prometheus,refresh,env,beans
 management.endpoint.health.show-details=always
 
+appointment.slot.minutes=30
+appointment.working-hours.start=09:00
+appointment.working-hours.end=17:00
+
 security.jwt.secret=0aKa2klczPmVfS2C0JIZqiAAHe18xxOeWbBbNBdrNBc=
