--- a/appointment-service.properties
+++ b/appointment-service.properties
@@ -1,7 +1,7 @@
 server.port=8082
 spring.application.name=appointment-service
 
-spring.datasource.url=jdbc:postgresql://db:5432/healthdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/healthdb
 spring.datasource.username=health
 spring.datasource.password=health
 spring.jpa.properties.hibernate.default_schema=appointment
@@ -9,7 +9,7 @@ spring.jpa.properties.hibernate.default_schema=appointment
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.kafka.bootstrap-servers=localhost:9093
+spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.template.default-topic=appointments.events
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
