hibernate is set to validate

--- a/user-service.properties
+++ b/user-service.properties
@@ -6,7 +6,7 @@ spring.datasource.username=health
 spring.datasource.password=health
 spring.datasource.hikari.maximum-pool-size=10
 
-spring.jpa.hibernate.ddl-auto=update        
+spring.jpa.hibernate.ddl-auto=validate        
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
