updating config for appointment service

--- a/appointment-service.properties
+++ b/appointment-service.properties
@@ -6,8 +6,11 @@ spring.datasource.username=health
 spring.datasource.password=health
 spring.jpa.properties.hibernate.default_schema=appointment
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
+spring.flyway.enabled=true
+spring.flyway.schemas=appointment
+spring.flyway.create-schemas=true
 
 spring.kafka.bootstrap-servers=localhost:29092
 spring.kafka.template.default-topic=appointments.events
