updated both services datasourse URLs to require TLS

--- a/appointment-service.properties
+++ b/appointment-service.properties
@@ -1,7 +1,7 @@
 server.port=8082
 spring.application.name=appointment-service
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/healthdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/healthdb?sslmode=verify-full&sslrootcert=D:/Project/health-center-platform/db/certs/pg-rootCA.crt
 spring.datasource.username=health
 spring.datasource.password=health
 spring.jpa.properties.hibernate.default_schema=appointment
