--- a/user-service.properties
+++ b/user-service.properties
@@ -1,7 +1,7 @@
 spring.application.name=user-service
 server.port=8081
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/healthdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/healthdb?sslmode=verify-full&sslrootcert=D:/Project/health-center-platform/db/certs/pg-rootCA.crt
 spring.datasource.username=health
 spring.datasource.password=health
 spring.datasource.hikari.maximum-pool-size=10
